src/test/resources/public/input/typechecking/pass/passReturn03.jova
class Helper{
    private int func1(){
        return 0;
    }

	public bool func2(){
        return false;
    }

}

class Test {

  public bool getBoolFromTest() {
    Helper t;
    t = new Helper;
    return t.func2();
  }
}