src/test/resources/public/input/typechecking/fail/incompatible_return/fail03.jova
class Test{

}

class Main {

  public int main() {
    Test t;
    t = new Test;
    return t;
  }

}